--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "firebase-tools": "^13.0.2"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
 }
