--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "dependencies": {
-    "express": "^4.18.2",
-    "firebase-tools": "^13.0.2"
-  },
+  "name": "your-project",
+  "version": "1.0.0",
+  "description": "Your Express App",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
