--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
-  command = "npm run build"
-  publish = "views"  # 만약 정적 파일이 다른 디렉토리에 있다면 해당 디렉토리로 변경
+  command = "npm start"
+  publish = "views"
