--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,4 @@
 [build]
   command = "npm start"
   publish = "views"
-  functions = "netlify/functions"
-  timeout = 900
+  functions = "functions"
