--- a/package.json
+++ b/package.json
@@ -1,13 +1,5 @@
 {
-  "scripts": {
-    "start": "npm run dev",
-    "dev": "netlify dev",
-    "build": "netlify functions:build"
-  },
-  "netlify": {
-    "functions": "functions"
-  },
-  "devDependencies": {
-    "netlify-cli": "^17.11.0"
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
