--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,9 @@
 [build]
   command = "npm start"
   publish = "public"
+
+[[redirects]]
+  from = "/:id1/*"
+  to = "/.netlify/functions/app/:id1"
+  status = 200
+  force = true
